v1 of full generator

--- a/genbank_card_generator_mini.html
+++ b/genbank_card_generator_mini.html
@@ -157,7 +157,7 @@
             Eukaryota; Metazoa; Chordata; Mammalia; Primates; Hominidae; 
             Homininae; Homo.
 <span class="field-label">REFERENCE   1  (bases 1 to <span id="bp-count2">2025</span>)</span>
-  <span class="field-label">AUTHORS   </span>Santa,C., Elf,W. and <span id="author-name">Meier,M.J.</span>
+  <span class="field-label">AUTHORS   </span>Claus,S., Elf,W. and <span id="author-name">Lastname,F.</span>
   <span class="field-label">TITLE     </span>The Molecular Basis of Holiday Spirit
   <span class="field-label">JOURNAL   </span>Nature: Holiday Edition 12 (25), 1-100 (<span id="year-label2">2025</span>)
 <span class="field-label">COMMENT     </span>This sequence was synthesized to ensure a bright and 
